# simple-socket.io-client-server

./: .env.example  README.md  pyproject.toml
src/: client.py  proto.py  server.py  utils.py
